<resources>
    <string name="app_name">Neko Gains</string>
    <string name="action_settings">Settings</string>
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_register">Register</string>
    <string name="action_sign_in">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="Store_Button">Store</string>
    <string name="Setting_Button">Setting</string>
    <string name="Progress_Button">Progress</string>
    <string name="Home_Button">Home</string>
    <string name="blueberries">BlueBerries</string>
    <string name="catfood">Cat Food</string>
    <string name="fish">Fish</string>
    <string name="milk">Milk</string>
    <string-array name="habit_array">
        <item>Do not or very seldom exercises</item>
        <item>1-2 times a week</item>
        <item>3-4 times a week</item>
        <item>5 or more times a week</item>
    </string-array>
    <string-array name="goal_array">
        <item>Low</item>
        <item>Moderate</item>
        <item>Vigorous</item>
    </string-array>
    <string name="save_button">Save</string>
    <string name="blueshirt">Blue Shirt</string>
    <string name="yellowshirt">Yellow Shirt</string>
    <string name="orangepants">Orange Pants</string>
    <string name="redpants">Red Pants</string>
</resources>
